--- a/Projet Calculatrice/style.css
+++ b/Projet Calculatrice/style.css
@@ -21,7 +21,7 @@ body {
     grid-auto-flow: row;
     grid-template-areas:
         "screen screen screen screen"
-        "boutonfois boutonfois boutondivise boutondivise"
+        "boutonfois boutondivise boutondeletelast boutondeletelast"
         "bouton7 bouton8 bouton9 boutonreset"
         "bouton4 bouton5 bouton6 boutonmoins"
         "bouton1 bouton2 bouton3 boutonplus"
@@ -75,14 +75,6 @@ body {
     grid-area: screen;
 }
 
-.boutonfois {
-    grid-area: boutonfois;
-}
-
-.boutondivise {
-    grid-area: boutondivise;
-}
-
 .virgule {
     grid-area: virgule;
 }
@@ -103,6 +95,17 @@ body {
     grid-area: boutonplus;
 }
 
+.boutonfois {
+    grid-area: boutonfois;
+}
+
+.boutondivise {
+    grid-area: boutondivise;
+}
+
+.boutondeletelast {
+    grid-area: boutondeletelast;
+}
 
 .bouton {
     background-color: #e2e8dd;
@@ -124,9 +127,4 @@ body {
     font-size: 46px;
     font-weight: 600;
     padding: 5px;
-}
-
-button {
-    width: 100%;
-    height: 100%;
 }
