--- a/Projet Calculatrice/style.css
+++ b/Projet Calculatrice/style.css
@@ -10,7 +10,12 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.728);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Share Tech Mono', monospace;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .calculatrice {
@@ -116,6 +121,12 @@ body {
     border: solid 1px;
     cursor: pointer;
     border: solid 1px rgba(0, 0, 0, 0.162);
+}
+
+.bouton:active {
+    background-color: #68696b;
+    transition: all 0.2s ease-out;
+    color: #e2e8dd;
 }
 
 .result {
